--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1 style="color: #658EA9;">Belly Button Biodiversity Dashboard</h1>
-        <p style="color: #8c53e7;">Use the interactive charts below to explore the dataset</p>
+        <p style="color: #536ee7;">Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
